estructura parcialmente completada de header y footer

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <header>
-        <div class="container-header">
+        <div class="container header-nav">
             <div class="imagen"><img src="" alt=""></div>
-            <div>
+            <div class="container-nav">
                 <div>HOME</div>
                 <div>PROYECTS</div>
                 <div>EXPERIENCS</div>
@@ -17,6 +17,11 @@
             </div>
         </div>
     </header>
+    <footer>
+        <div class="container foot">
+
+        </div>
+    </footer>
     
 </body>
 </html>
