rellene datos de el footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </header>
     <footer>
         <div class="container foot">
-
+            <div>telefono: 948701436</div>
+            <div>email: jeffertsap@hotmail.com</div>
+            <div>algo mas xd</div>
         </div>
     </footer>
     
