--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div class="container header-nav">
-            <div class="imagen"><img src="" alt=""></div>
+            <div class="logo">PORTAFOLIO</div>
             <div class="container-nav">
                 <div>HOME</div>
                 <div>PROYECTS</div>
@@ -17,6 +19,13 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="container-main">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </main>
     <footer>
         <div class="container foot">
             <div>telefono: 948701436</div>
@@ -24,6 +33,6 @@
             <div>algo mas xd</div>
         </div>
     </footer>
-    
 </body>
+
 </html>
