agrege estilos a el nav y backgraund color al main

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 
@@ -11,7 +12,7 @@
     <header>
         <div class="container header-nav">
             <div class="logo">PORTAFOLIO</div>
-            <div class="container-nav">
+            <div class="container container-nav">
                 <div>HOME</div>
                 <div>PROYECTS</div>
                 <div>EXPERIENCS</div>
@@ -21,9 +22,9 @@
     </header>
     <main>
         <div class="container-main">
-            <div>qws</div>
-            <div></div>
-            <div></div>
+            <div class="container-imagen"><img src="mi foto.jpg" alt=""></div>
+            <div><h1>PAUL PEREZ</h1></div>
+            <div><h2>programador</h2></div>
         </div>
     </main>
     <footer>
