agrege direccion en footer y contenido en main

--- a/index.html
+++ b/index.html
@@ -25,12 +25,20 @@
             <div></div>
             <div></div>
         </div>
+        <div class="contenido">
+            <h2>CONTENIDO</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident, illum voluptas, ratione blanditiis accusantium sint officia hic est porro molestias minus velit quis! Quisquam culpa officiis iure, a illo amet.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat fugit ab incidunt porro. Aperiam, nobis reiciendis excepturi unde nesciunt veritatis totam optio magnam, beatae ratione soluta magni rerum nam quod.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim numquam suscipit error reiciendis, labore consequatur nam facere. Nisi facere laborum labore deserunt? Molestias, repellat? Dicta debitis qui ipsam officia aliquid.
+            </p>    
+        </div>
     </main>
     <footer>
         <div class="container foot">
             <div>telefono: 948701436</div>
             <div>email: jeffertsap@hotmail.com</div>
-            <div>algo mas xd</div>
+            <div>belisario suarez 452</div>
         </div>
     </footer>
 </body>
